tests/NormalTests/paczka1/fuzzy1/60015808.err
Error in line 11: 7CjX1Wj S721 32,4
Error in line 13: 4M3 S384 12,8
Error in line 16: 4M3 S721 26,4
Error in line 22: 4M3 A913 51,1
Error in line 10: YMs79H9zpLd A188 22,4
Error in line 29: YMs79H9zpLd S384 7,8
Error in line 24: S721 A188 43,6
